--- a/ReadMe
+++ b/ReadMe
@@ -41,3 +41,16 @@ I am the only person who maintains and contributes to this project.
 
 
 THE LINKS FOR THIS PROJECT ARE:
+
+https://github.com/LevarB100/liri
+
+
+
+
+
+
+PICTURES OF LIRI RESULTS:
+
+[MOVIE-THIS LINK](https://github.com/LevarB100/liri/blob/master/images/liri1.png)
+[CONCERT-THIS LINK](https://github.com/LevarB100/liri/blob/master/images/liri%202.png)
+[SPOTIFY-THIS](https://github.com/LevarB100/liri/blob/master/images/liri%203.png)
